--- a/lattice_mismatch.ipynb
+++ b/lattice_mismatch.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "70db5626",
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"qy9RSVA3e6CHmVxpRp5ZOyimycBYT4Jc\"\n",
+    "API_KEY = \"\"\n",
     "\n",
     "# Initialize storage for each structure type\n",
     "bcc, fcc, sc = [], [], []\n",
